general: - added styling overrides for sidenav - added basic layout for projects - added basic support for project summaries - added basic support for dynamic projects by adding projectInfo.json files for each project in irrlicht/public/projectFiles/"projectName" - added two test projects in irrlicht/public/projectFiles
app:
- added border to the right of the sidenav/drawer to better visualize where the sidenav ends and the main content starts

--- a/src/pages/projects/projects.html
+++ b/src/pages/projects/projects.html
@@ -1,11 +1,10 @@
-<main style="padding: 20px">
-  <mat-card class="gradient-border" style="height: 200px">
-    <mat-card-header>
-      my project
-    </mat-card-header>
-
-    <mat-card-content>
-      my card content
-    </mat-card-content>
-  </mat-card>
+<main>
+  <mat-tab-group headerPosition="below">
+    @for (project of projects; track project) {
+      <mat-tab>
+        <ng-template mat-tab-label>{{ project.title }}</ng-template>
+        <project-summary-base [project]="project"/>
+      </mat-tab>
+    }
+  </mat-tab-group>
 </main>
