[projects-site] (slight detour in this commit to try out some stuff in the home component)
home:
- added test element that shows a light around the cursor while on that element
- handled edge cases to keep the light always exactly on the cursor (handled scrolling and sidenav changes)

app:
- updated how the buttons for specific projects work. They are now dynamically generated and create links with the projectName instead of the index -> increases url readability

sidenav-mode-toggle:
- changed css to scss to use sass variables
- added functionality to automatically update global css variables when the sidenav changes

styles:
- added global variables for the sidenav that update when its status changes (update is done in sidenav-mode-toggle
- added overrides for mat-toolbar to have specific control over its dynamic height

customVariables:
- added variables for toolbar and sidenav and replaced hardcoded values in other files with them

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<main>
+  <div class="mission-container-overlay">
+    <div
+      #cursorLight
+      id="cursorLight"
+      [ngStyle]="cursorLightCssVariables"
+    ></div>
+  </div>
+  <div class="mission-container">
+    <span>hello demons</span>
+  </div>
+</main>
