--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Jersey+15&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
+  <!-- blocked ai crawlers -->
+  <!-- The Common Crawl dataset. Used by GPT-3 (and GPT-3.5) and available for others. -->
+  <meta name="CCBot" content="nofollow">
+
+  <!-- Used by DeviantArt, ArtStation, etc. based on opt-in or opt-out -->
+  <meta name="robots" content="noai, noimageai">
+
+  <!-- TDM Metadata in HTML Content -->
+  <meta name="tdm-reservation" content="1">
 </head>
 <body class="mat-typography">
 <app-root></app-root>
