- added meta tag to block indexing of the site for now (should be removed when going fully live) - fixed scrolling issues when changing routes (page wouldn't scroll to top) - removed "Support"-text from home page as it doesn't make sense currently - implemented team page with member-cards - added 3 team members

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Jersey+15&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
+  <!-- blocked google indexing. REMOVE WHEN GOING FULLY PUBLIC-->
+  <meta name="robots" CONTENT="noindex,nofollow">
+
   <!-- blocked ai crawlers -->
   <!-- The Common Crawl dataset. Used by GPT-3 (and GPT-3.5) and available for others. -->
   <meta name="CCBot" content="nofollow">
